Incluindo conexao ADO

--- a/WebFormsEstudo/Web.config
+++ b/WebFormsEstudo/Web.config
@@ -69,7 +69,7 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />
+    <add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=USR_FILMES;Password=filmes;Data Source=XE" />
 	  <add name="Entities" connectionString="metadata=res://*/Models.FilmesModel.csdl|res://*/Models.FilmesModel.ssdl|res://*/Models.FilmesModel.msl;provider=Oracle.ManagedDataAccess.Client;provider connection string=&quot;DATA SOURCE=localhost:1521/XE;TNS_ADMIN=C:\Users\leoso\Oracle\network\admin;PASSWORD=filmes;PERSIST SECURITY INFO=True;USER ID=USR_FILMES&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
