--- a/VideoBusinessLayer/VideoBusinessLayer.csproj
+++ b/VideoBusinessLayer/VideoBusinessLayer.csproj
@@ -55,6 +55,7 @@
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
     </Reference>
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.OracleClient" />
     <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
@@ -90,7 +91,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Business\Filme.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="Models\FilmeAdoDAO.cs" />
+    <Compile Include="Models\IFilmeDAO.cs" />
     <Compile Include="Models\FilmeEntityDAO.cs" />
     <Compile Include="DTO\FilmeDTO.cs" />
     <Compile Include="Models\FILMES.cs">
@@ -118,6 +120,7 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <DependentUpon>Settings.settings</DependentUpon>
     </Compile>
+    <Compile Include="Util\ConnectionFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -157,5 +160,4 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets" Condition="Exists('..\packages\System.Text.Json.6.0.0\build\System.Text.Json.targets')" />
-  
 </Project>
